--- a/Product Sentiment Analysis.ipynb
+++ b/Product Sentiment Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting sentiment from product reviews\n",
+    "# Predicting sentiment from Product reviews\n",
     "\n",
     "# GraphLab Create"
    ]
